--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ PyDispatcher==2.0.5
 pyOpenSSL==18.0.0
 PySocks==1.6.8
 python-crfsuite==0.9.6
+pytz==2018.7
 query-string==1.0.2
 queuelib==1.5.0
 request==1.0.2
